Information div changes its content depending on which link is active, close button in each page is added, added media queries to prevent displaying ugly page on smaller screens

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -124,6 +124,7 @@ h3{
 }
 
 .information{
+    margin-top: 0.5rem;
     background-color: yellow;
     position: absolute;
     top: 100%;
@@ -139,4 +140,8 @@ h3{
 
 .information h3{
     color: black;
+}
+
+.forever{
+    visibility: hidden;
 }
